Добавлена ветка с 6 спритом